--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,12 @@ stages:
     displayName: Build
     pool:
       vmImage: ubuntu-latest
+      
     steps:
+    - task: UsePythonVersion@0
+      inputs:
+        versionSpec: '3.6'
+    
     - task: Docker@2
       displayName: Build an image
       inputs:
@@ -27,3 +32,4 @@ stages:
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: |
           $(tag)
+
